--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,15 @@
  <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-620784-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-620784-1');
+    </script>
     <meta charset="utf-8">
     <title>Jim Barraud</title>
     <script src="https://use.typekit.net/ywv0rfr.js"></script>
