--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -20,7 +20,7 @@
     {% endif %}
     {% if title-check != false %}
         <header>
-        <h1 class="entry__title">{{ title }}</h1>
+        <h1 class="entry__title"><a href="{{ post.url }}" class="entry__title--link">{{ title }}</a></h1>
         </header>
     {% endif %}
     <section class="entry__content">
@@ -45,7 +45,6 @@
             {% unless forloop.last %}, {% endunless %}
             {% endfor %}
         </li>
-        <li class="entry__meta-item entry__permalink"><a href="{{ post.url }}"><img src="{{ site.url }}/images/icons/link.svg" alt="Permalink" style="color: white;" class="icon_permalink"></a></li>
         </ul>
         
         </footer>
