--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
 @import "variables/variables";
 
 body{
-  background: #F2F2F2;
+  background: #fff;
   font-family: $font-stack;
 }
 nav ul,
@@ -72,7 +72,7 @@ a:link,a:visited{
   }
 }
 .site-header__container{
-  max-width: 1380px;
+  max-width: 1280px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -82,10 +82,10 @@ a:link,a:visited{
 }
 .site-header__title{
   display: inline-block;
-  margin: 0 0 0 45px;
+  margin: 0 0 0 30px;
   text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 700;
+  font-size: 28px;
+  font-weight: 400;
   margin-right: 34px;
   @include breakpoint(bp-tablet){
     margin-left: 25px;
@@ -129,11 +129,6 @@ a:link,a:visited{
   background-size: 16px 17px;
   text-indent: -9999px
 }
-.social-links__item--linkedin a{
-  background: url(/images/icon_linkedin@2x.png) no-repeat;
-  background-size: 16px 17px;
-  text-indent: -9999px
-}
 .social-links__item--github a{
   background: url(/images/icon_github@2x.png) no-repeat;
   background-size: 16px 16px;
@@ -141,7 +136,7 @@ a:link,a:visited{
 }
 .page-title{
   margin-top: 10px;
-  margin-left: 45px;
+  margin-left: 29px;
   font-size: 48px;
   @include breakpoint(bp-phone){
     font-size: 22px;
@@ -152,13 +147,13 @@ a:link,a:visited{
   font-weight: 400;
 }
 .main-content{
-  max-width: 1380px;
-  margin: 40px auto 0;
+  max-width: 1280px;
+  margin: 20px auto 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   @include breakpoint(bp-tablet){
-    margin: 20px 20px 0;
+    margin: 20px auto 0;
   }
   @include breakpoint(bp-phone){
     margin: 0 8px 0;
@@ -168,11 +163,8 @@ a:link,a:visited{
   display: block;
   flex-direction: column;
   justify-content: center;
-  align-self: center;
-  background-color: #fff;
   padding: 30px;
-  margin-bottom: 80px;
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.11);
+  margin-bottom: 50px;
   @include breakpoint(bp-phone){
     padding: 10px 10px;
     margin-bottom: 30px;
@@ -185,11 +177,21 @@ a:link,a:visited{
 //   align-self: center;
 // }
 .entry__title{
-  text-align: center;
-  font-size: 36px;
+  font-size: 42px;
   margin-bottom: 35px;
+  font-weight: 400;
   @include breakpoint(bp-phone){
-    font-size: 18px;
+    font-size: 24px;
+    margin-bottom: 25px;
+
+  }
+}
+.entry__title--link{
+  &:link,&:visited,&:active{
+    color: #000;
+  }
+  &:hover{
+    border-bottom: 1px solid #000;
   }
 }
 .entry__content{
@@ -211,7 +213,7 @@ a:link,a:visited{
   color: #262626;
   line-height: 29px;
   letter-spacing: .5px;
-  margin: 0 auto 30px;
+  margin: 0 0 30px;
   width: 700px;
   @include breakpoint(bp-tablet-small){
     width: 100%;
@@ -227,9 +229,15 @@ a:link,a:visited{
     padding: 0 20px;
   }
 }
+
+.entry__content h2{
+  font-weight: 400;
+  @include breakpoint(bp-phone){
+    font-size: 18px;
+  }
+}
 .entry__content--feature{
   max-width: 1280px;
-  margin-bottom: 10px;
 }
 .entry__image-caption{
   font-size: 12px;
@@ -242,6 +250,8 @@ a:link,a:visited{
   height: auto;
   display: block;
   margin-bottom: 5px;
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.30);
 }
 .entry__image--half{
   width: 60%;
@@ -262,7 +272,6 @@ a:link,a:visited{
 
 .entry__image-container{
   width: 100%;
-  margin-bottom: 16px;
   margin-left: 20px;
   &:first-of-type{
     margin-left: 0;
@@ -283,8 +292,8 @@ a:link,a:visited{
 
 .entry__footer{
   width: 100%;
-  margin: 50px auto 0;
-  padding-top: 30px;
+  margin: 0 auto 0;
+  padding-top: 0px;
   @include breakpoint(bp-phone){
     margin-top: 0;
     padding-top: 15px;
@@ -297,13 +306,16 @@ a:link,a:visited{
 }
 .entry__meta-item{
   list-style: none;
-  display: inline-block;
-  margin: 0;
+  margin: 0 0 8px 0;
   padding: 0;
   color: #9B9B9B;
-  margin-right: 50px;
   font-size: 14px;
-  a{
+  font-family: acumin-pro, sans-serif;
+
+  font-weight: 500;
+  
+  font-style: normal;
+    a{
     &:link,&:visited,&:active{
       color: #9B9B9B;
     }
