--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
     <title>Jim Barraud</title>
     <script src="https://use.typekit.net/ywv0rfr.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
-    <link rel="stylesheet" href="{{ site.url }}/css/style.css" media="screen" title="Core Stylesheet">
+    <link rel="stylesheet" href="https://jimbarraud.com/css/style.css" media="screen" title="Core Stylesheet">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   </head>
   <body>
